--- a/package.json
+++ b/package.json
@@ -9,29 +9,36 @@
         "dev": "webpack --mode development --watch",
         "test": "jest",
         "lint": "eslint src/**/*.js"
-      },
-    "keywords": ["story", "spa", "dicoding"],
+    },
+    "keywords": [
+        "story",
+        "spa",
+        "dicoding"
+    ],
     "author": "ihsan",
     "license": "ISC",
     "dependencies": {
-      "axios": "^1.6.2",
-      "leaflet": "^1.9.4",
-      "dompurify": "^3.0.6"
+        "axios": "^1.6.2",
+        "dompurify": "^3.0.6",
+        "leaflet": "^1.9.4"
     },
     "devDependencies": {
-      "@babel/core": "^7.23.5",
-      "@babel/preset-env": "^7.23.5",
-      "babel-loader": "^9.1.3",
-      "css-loader": "^6.8.1",
-      "dotenv-webpack": "^8.0.1",
-      "eslint": "^8.55.0",
-      "file-loader": "^6.2.0",
-      "html-webpack-plugin": "^5.5.4",
-      "jest": "^29.7.0",
-      "style-loader": "^3.3.3",
-      "webpack": "^5.89.0",
-      "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^4.15.1",
-      "workbox-webpack-plugin": "^7.0.0"
+        "@babel/core": "^7.23.5",
+        "@babel/preset-env": "^7.23.5",
+        "babel-loader": "^9.1.3",
+        "copy-webpack-plugin": "^13.0.0",
+        "css-loader": "^6.8.1",
+        "dotenv-webpack": "^8.0.1",
+        "eslint": "^8.55.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.4",
+        "jest": "^29.7.0",
+        "style-loader": "^3.3.3",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
+        "webpack-manifest-plugin": "^5.0.1",
+        "webpack-pwa-manifest": "^4.3.0",
+        "workbox-webpack-plugin": "^7.3.0"
     }
-  }
+}
