--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,64 @@
 {
-  "name": "Dicoding Story",
+  "name": "Dicoding Story App",
   "short_name": "DStory",
-  "description": "Berbagi cerita dengan komunitas Dicoding",
-  "start_url": "/",
+  "description": "Berbagi cerita dengan komunitas Dicoding - Progressive Web App",
+  "start_url": "/?utm_source=pwa",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#ffffff",
   "theme_color": "#2196F3",
+  "lang": "id",
+  "dir": "ltr",
+  "categories": ["social", "lifestyle"],
   "icons": [
+    {
+      "src": "/images/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/images/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/images/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/images/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/images/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
     {
       "src": "/images/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/images/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/images/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "shortcuts": [
@@ -23,10 +66,23 @@
       "name": "Tambah Cerita Baru",
       "short_name": "Tambah",
       "description": "Buka halaman tambah cerita baru",
-      "url": "/add-story",
+      "url": "/add-story?utm_source=pwa_shortcut",
       "icons": [
         {
           "src": "/images/icons/add-icon.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Lihat Cerita",
+      "short_name": "Lihat",
+      "description": "Lihat semua cerita",
+      "url": "/stories?utm_source=pwa_shortcut",
+      "icons": [
+        {
+          "src": "/images/icons/view-icon.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -35,14 +91,24 @@
   ],
   "screenshots": [
     {
-      "src": "/images/screenshots/desktop.png",
-      "sizes": "1440x900",
-      "type": "image/png"
+      "src": "/images/screenshots/desktop-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "DStory pada desktop"
     },
     {
-      "src": "/images/screenshots/mobile.png",
+      "src": "/images/screenshots/mobile-narrow.png",
       "sizes": "360x640",
-      "type": "image/png"
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "DStory pada mobile"
     }
-  ]
+  ],
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "iarc_rating_id": "",
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 }
